--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS FILE -->
-    <link rel="stylesheet" href="/Css/style.css">
-    <link rel="stylesheet" href="/Css/skin/color-1.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="color-1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="stylesheet" href="/Css/skin/color-1.css" class="alternate-style" title="color-1" disabled>
-    <link rel="stylesheet" href="/Css/skin/color-2.css" class="alternate-style" title="color-2" disabled>
-    <link rel="stylesheet" href="/Css/skin/color-3.css" class="alternate-style" title="color-3" disabled>
-    <link rel="stylesheet" href="/Css/skin/color-4.css" class="alternate-style" title="color-4" disabled>
-    <link rel="stylesheet" href="/Css/skin/color-5.css" class="alternate-style" title="color-5" disabled>
-    <link rel="stylesheet" href="./Css/style-switcher.css">
+    <link rel="stylesheet" href="color-1.css" class="alternate-style" title="color-1" disabled>
+    <link rel="stylesheet" href="color-2.css" class="alternate-style" title="color-2" disabled>
+    <link rel="stylesheet" href="color-3.css" class="alternate-style" title="color-3" disabled>
+    <link rel="stylesheet" href="color-4.css" class="alternate-style" title="color-4" disabled>
+    <link rel="stylesheet" href="color-5.css" class="alternate-style" title="color-5" disabled>
+    <link rel="stylesheet" href="style-switcher.css">
     <title>Soufiane Staps</title>
 </head>
 <body>
@@ -450,8 +450,8 @@
     </div>
     <!-- JS FILE -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
-    <script src="/Js/script.js"></script>
-    <script src="/Js/style-switcher.js"></script>
+    <script src="script.js"></script>
+    <script src="style-switcher.js"></script>
     <!-- Email JS -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"> </script>
     <script type="text/javascript">
