--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
                         </div>
                         <div class="home-img padd-15">
-                            <img src="./img/20220211_202950.jpg" alt="">
+                            <img src="https://instagram.fogx1-2.fna.fbcdn.net/v/t51.2885…_ZMJUvU76vgEt4uvj1qOaw&oe=6278C1F1&_nc_sid=30a2ef" alt="">
                         </div>
                     </div>
                 </div>
