--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello, My name's <span class="name">Soufiane Kerrouche</span></h3>
                             <h3 class="my-profission">I'm a <span class="typing">Personal Training</span></h3>
-                            <p>I'm Personal Training online and directly, I'm Coach Karate-Do and Fitness and Football also I'm athlete karate and Handball, I have Master Degree in Elite Athletic Training.... </p>
+                            <p>I'm Personal Trainer online and directly, I'm Coach Karate-Do and Fitness and Football also I'm athlete karate and Handball, I have Master Degree in Elite Athletic Training.... </p>
                             <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
                         </div>
                         <div class="home-img padd-15">
@@ -242,55 +242,55 @@
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
-                                    <i class="fa fa-mobile-alt"></i>
+                                    <i class="fa fa-hand-back-fist"></i>
                                 </div>
-                                <h4>Coach Karete</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore </p>
+                                <h4>Karate Coach</h4>
+                                <p>I teach you the best techniques of self-defense and attack </p>
                             </div>
                         </div>
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
-                                    <i class="fa fa-laptop-code"></i>
+                                    <i class="fa fa-running"></i>
                                 </div>
-                                <h4>Coach Karete</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore </p>
+                                <h4>Fitness Coach</h4>
+                                <p>Train you to improve your fitness and build a healthy body </p>
                             </div>
                         </div>
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
-                                    <i class="fa fa-palette"></i>
+                                    <i class="fa fa-football"></i>
                                 </div>
-                                <h4>Coach Karete</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore</p>
+                                <h4>Football Coach</h4>
+                                <p>I offer basic training to OEO Academy athletes, U 11 class</p>
                             </div>
                         </div>
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
-                                    <i class="fa fa-code"></i>
+                                    <i class="fa fa-children"></i>
                                 </div>
-                                <h4>Coach Karete</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore </p>
+                                <h4>Karate Coach</h4>
+                                <p>I train children U 12 with the best scientific methods to achieve the best sports results</p>
                             </div>
                         </div>
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
-                                    <i class="fa fa-search"></i>
+                                    <i class="fa fa-bowl-food"></i>
                                 </div>
-                                <h4>Coach Karete</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore</p>
+                                <h4>Nutrition Consultant</h4>
+                                <p>I offer advice and advice on healthy nutrition and improving your diet</p>
                             </div>
                         </div>
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
-                                    <i class="fa fa-bullhorn"></i>
+                                    <i class="fa fa-paper-plane"></i>
                                 </div>
-                                <h4>Coach Karete</h4>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore </p>
+                                <h4>physical preparation</h4>
+                                <p>Providing a special training program for athletes who are preparing for the beginning of the sports season</p>
                             </div>
                         </div>
                     </div>
