--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
                         </div>
                         <div class="home-img padd-15">
-                            <img src="https://instagram.fogx1-2.fna.fbcdn.net/v/t51.2885…_ZMJUvU76vgEt4uvj1qOaw&oe=6278C1F1&_nc_sid=30a2ef" alt="">
+                            <img src="https://scontent.fogx1-2.fna.fbcdn.net/v/t39.30808-6/274081109_1004827473747829_214744049106518682_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=730e14&_nc_ohc=jiWWx53iOWYAX8FvEvT&_nc_ht=scontent.fogx1-2.fna&oh=00_AT86AIVEfi1AAd7mzuLB15oEZOQC_t-2Sjs3EfxnIcn8qA&oe=6276F22E" alt="">
                         </div>
                     </div>
                 </div>
