--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
                         </div>
                         <div class="home-img padd-15">
-                            <img src="https://scontent.fogx1-2.fna.fbcdn.net/v/t39.30808-6/274081109_1004827473747829_214744049106518682_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=730e14&_nc_ohc=jiWWx53iOWYAX8FvEvT&_nc_ht=scontent.fogx1-2.fna&oh=00_AT86AIVEfi1AAd7mzuLB15oEZOQC_t-2Sjs3EfxnIcn8qA&oe=6276F22E" alt="">
+                            <img src="https://lh3.googleusercontent.com/chvKc9tGoXZZ9olmIirEVEy4-VT1bxTGh16Dncy89MwtfeNF0xuMR1m_dgUFF4eUOez0Jcni-GH-6H9kQNFxAYkvM0GqiZxPnVvsww9y9OM80zuP3d7FSBnY625Dg6EzDZ9km4UmithTQ7Pm1WB4NaoZ4Jyw7-biDgdnqaatb0hYPO4zWxqt5bLiHey-PeW_1ylnFvA75Js6cd0MVugBobqgZh7b2f9PIFx7LfCvmz1YBObDvUJnyzL6neg72k-3-5UC4jA0cIOP37rwynslYPYIrYsidXP67A5OfzIZ2JBxPPwZv80r-XAwCuS8_JwlLxiYlcHTcWauZcVVBfuJ4medGHohDQ9Hqtw4he8mXXRXENDCfhTV44H7jalqX3b--weerWf5DAbs0C_VCc89On2Ue5B_PrZoYB9WL7_6MxNdnkKqFjTCbL5Lzr2rjXCGAbmWBd9tc-7dY_5PY3FTWqSkXbnCgonZuazJzWRQQd1G80qHA4x2QW5Ibuz_D3FSgiUhHukE5NbEbvZeJKJm4Gw1LPz8083J_5_GHSVSOjx2x1WH7WZVGxo8B_gCPAUZ6lfRJEWbnq3c5S_x8Y8dSto5K-HlYbCxagrNxwDahflhtBzEYIKL3DoU6VnPCaJjN10jaWU9DnUJoDtt8CRvbo6CdNBo58wjDrIs45enVJXDUKYL1t-lsgnd2QvI8gN1LZw1ZN5saA0m07lxNlHs2HXynMj6oRckCLd6TTSGiGFpSIITK2wQG5EEtcAQeA=w534-h667-no?authuser=0" alt="">
                         </div>
                     </div>
                 </div>
@@ -313,42 +313,42 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="./img/Portfolio/1.jpg" alt="">
+                                    <img src="https://lh3.googleusercontent.com/h13UjeL2Ka7nOSCWtUZxW9u2UlR2cnDG3bo5NpB926s5dizfBW24hyhiw5CPy5rglrU8z4dRjFgSR0sOpgsaMirALgNNDnsv5WH8SmenGGhOl_5OQqf4tpf5ZW2LQIdeqe2cGiUzKlSz4A8o6EZxRnq-SsJmdhzRXqCPy3OEmaf4bvBCsuwk5vVe5K2-OGjh23hSP1R_fVEnX9Bs_DmPJ0zOnN1kdFXU4sR-XXS7XCGkklbJXH6AEDtslLwtzBCXRKvnC8IW7jAzCOMA1m-cBzElBDXgrINPLz4Fd2UMINsn7RiA3ooAor8EkLferF4Z85S2WMgehmFKT_Gxi95old6nu8ZH5mr0lY43rvAyebnGpUdDdFKpy5X8R7A_KpMo3lzYRmmITqsmPXu8yoUlMhxKBSdBxjXt4PbcuTqMIFEjEQiQzdMN2eJ4WOWpk7zFkoHhCBAWn6FmTP6z35aCDkEuTdNa6NL-Kymi1t4BysIMgbScXvP0ErvjbAuQgPxR8pe-aUKsH-C6QnagOU2De0BOdMY7aEwuto3ennLK2Qmiwp0zKEw4Qf5Obvfn5jAbv3ZkNHWYymf2K7a83drgCTY-MFokNqLCsicGIY5jVHKqzO5-OfzUoVV1sxq9LfGDTpVe6MtUf1L1EeLG5zgFZwP4mHVNIgSExbRCjfOD58SalUUlsFf05ZCIyucIBxpFWKUx7UuW-o0kltOHpdfJuYdQPxlmwIN5Prj7DhcYOM-LK1MkcmKwM874nU_gSw=w890-h667-no?authuser=0" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="./img/Portfolio/2.jpg" alt="">
+                                    <img src="https://lh3.googleusercontent.com/DILZrCRUzIKlsibSjHRIhDSec1AWwrhq14rqfoyZEe3473jnvQgV7TAId9oI-H5djp4x5FmMb5lMjFSx26qPD4f0_vftvYe13SpLFn8V0lRSoEbxEah1XyyaFHbGAMbBn0iRy0cWf2eTURrY-ybNM3LkMAU-l6w7SpuqOtcJsPX5EwOmMfJATtXjd1qHTJT725pcfLsToqjRTzn3fXlGZuXPD6Va959vHEGIVEjSiKPD3aU_6AsK0iQjGV1HP0zIyK1YLASse0YQ0L3qq2T80OLt6cvCF2oEIqE2j3JPt5w1y1Qp3_k40fZl4FyB83p5GtbFaLGDzc3My7GsTvGh-f4iNKbYdA_4Yh-f5m4rD4BjVMNHl89KoX1OaNYobqZNWlSaPn7m2CucWSKVUtlqUc5TWEe8nDorDtGYwDq_9O_hlfF1VSHapSGZgA54VwrHUYR9pgQqoFWb1os2zHllkur4iJhwn1q26cRnhtVPkcCp6t6cD0eOiULukOtsjaPwCjTCiDN_ef0SrbVqDqEqZbCO_BGEjIEy1cj1Djpw13NgO3MijZnWaqh7apdsrQzNNuJYo-Rhf6WzQTo8rpt2EyAUPpnXaC_SNy0g2re2mhRjsXURASR-RrV1ElH6wVpp1U0ClIfzokjyXxA1-rZRvBc1872JW-m0q19FyOaSTjxni0a-iuUxTkRS3e5MIiXQ6wblGKtZzekuoC9TLO7-N5Ex5p0NcUsm7-1b7gr2l_yTrKUhg8t0LPQ8F1X8XA=w892-h667-no?authuser=0" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="./img/Portfolio/3.jpg" alt="">
+                                    <img src="https://lh3.googleusercontent.com/hSkIrcJDl3j99ExKQiFowOZADsTn_TEJ2otEPzHzcbfq55JYZdSnlZKUUpSRMkGmhjDIA6Rsr2EL6YmRhonZkuhg9oNxdnTWoisMGuJK48iyGO9xxdHXTn64KAhxLsKORFtmW7uk2496KYa8VzXq45YR8RinHgKHZvQn-f7D4tzYrVIdcG4yiKphyZB5qrtcZ0hHNED0TYe0JqwrbxiDp_pdi8-HXSCIme3tFTC0DBCkwcX8o0l5ihm5oOZdvlpPIAJ4YodjofInrTkeGM2Ssi1z5LBw4hIJEmZx5QzFO5I3xFgwumwI09Krseov6mN0lK5-EqAGLYoQ1kicuU1xbtLGG6df4ShnvW1Y_3HxNa3DTO3vpXxeAC1X3Q3Xg9t-4HkVQsf7ejbkBGX_um4K39shE-tq1_vV3Opf93ZC7czC8xbRgK2PFEwNRDkw4KF__X-F9gTxYs9OMqtzMycPavI412-Qt0Iw-y_A5lPj-XkOSAwTY-qrLZDanwOE4_ZTFIRkOMF2smHe9hT6WwRH_eMIAiZCP8O6Uf4oHj1mFTgwlXhYPHfMjc4qFTZxetXPeFn2nQFLJxJmyneocYwzBHUI7kcyXxhRVe0ekfnlEmtFsyMlfMS7zMIoVJZ9bV-dFOfOauWAvcdMxZmwUhD6-aXZkKtyUTlp1GU-63jbG2Nu4Eis2_4JUmaviuj5HeBkDTR-YD1rK6LLRZVUUVzKbD9PvKRA7vGrm0M213yTQmNsKF3jONrvGlU59P5AtA=w890-h667-no?authuser=0" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="./img/Portfolio/4.jpg" alt="">
+                                    <img src="https://lh3.googleusercontent.com/BEz-jESZxb2AhS7lkQAwhIyY1NI8IIl-EBEFqNrLNV4mye9CFOzdoYILUZ-pH8Ff2IdypBWRn6bQpOmjnecIZuwHdSLdudEdyJKIX-hQQM3u2ZBsMtLyov2rck7AchGBJ4ga3wQNNPHvhDPREmNBXzdXTdg9DAGc1DzbFKAPAblAX0Jm4cPijjWLeGHeMVaoyHNQbEq7Ff48aJDTGr16y_hWONfts_04KFghiZ1XjxF0dQmhnXyNMGdfdmZHqJqkJjDl5UcHv3W1_Xdm8oHq93OaRXt3r119_4FKdd7PSNyhmzjwvhEfOK2fWAIi_wL2eQjEhbj8ivXKTJbB6bm8rS9OTn_hk3C97DP2_MJa-sm4TyqlcFsEilwUx3KclDjkwU6hJnFYDGseB13HF0-jAvB3dHSitr5s8L4zxzwPdctGaJ0XUKPh2TkxU1y4XyMQBfIJYtQ68zEzDQwWaHwW8hsjTJ_cuO8qx1s0VAGYaeUMzb41byofubM_qHS-6CX7UC0MV1kCUjddZ-cmOwv__DaE5FYZYE4xxkLvFK7_eZ98cf3zORbmi4ehHxMs3pUvPKLuxnNtVZ5zGGAXnV67nhW7vGHB3y0-HDLcNJJiODGWehSZayV6Vbj3VJf-xnCR-R9PQVLoqYXHwA1AzHvpXaZ0SvjCZmTpsFO_2K-veXUwvWM4G2vJQB0wvHpXufR3IV_PnJy1zVKdcWTGIhOSe5dA1bGKnbW656eH6oFj3IVePvOl9idlb_d_WGJykg=w890-h667-no?authuser=0" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="./img/Portfolio/5.jpg" alt="">
+                                    <img src="https://lh3.googleusercontent.com/tIw9DaP3qPBtbjh2EY0ufgHZBg5tX3rYG65cH3_d4h8KAqSx0uXk9xeIX3O8zhnY_eCGFPYGU3zCAebxTz3cHUkqE6aVi6WgukIh0NwipP3Y65DZVe1wVDK93QUXhGZ9JQsbuDkDqywKGroTDj_fCy1Geu6Q2mEPYk2H4ZBL6ZLM8ZCuwApet3Nrw2Egb099vBjdyi8SVRjjlXbYMziNyEpKP5Q_HkXripbrWgpalES055yMEbazkAcgm6fcBV07MdOUSGLLzlqDVdEHF212pzXp4Yqh0HEKx1AcwdDMVrY1oTv5Hs_VkujpBNEUhT6_jchfkbBoVKq7pn_NaDPakheh29a4YQsfwsfObGGmU1HSGMbsiJVQvu_v2Y7J4zotZQX79m7ugpmUUCizDJDeX5MH5IHSgi3RLpPLR4zPMQBnyQpi-tjU0zl-C_wogg0pymTomEU6WHEjp8PYGtky1hATULWr2BQB5IOpedscBE9WSVBLaH2Vgy-13quXjWDAyl1XhguxJq69-3QZu6W4KEFb8GC-qzmyItbLgON7sfrtyyMtFlNKmqAiYqsSYuTleM67uYdjqs6tKDBHKlEmwxhes5s5arHnejcTHay3IABwHG6uddOSus-ioqXCflt7gmvAR1AZqO4_cAWkC4669TYpKoezxTGcineO96SyUhXi0L_T8wkClmo1Licx0cQGNFhHjcGRb5ENtNUnpseVtTsyNZYcJ1Y6MykVNezjksRmaNpSZ5t-15YkBqFqqw=w890-h667-no?authuser=0" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="./img/Portfolio/6.jpg" alt="">
+                                    <img src="https://lh3.googleusercontent.com/X0m8iDnlUHyitmOgEzY_v8i8jF_S1-9RTy3o1Hsmg2gSYP4NWatyfCTJADWm0VqXwNzqpu2plJ5L80huT8iLZbDf_MYBA8iISJVYccF3M1rFNmnnwt71nHS4d1q0qQhioCLeaCNhC_8p8v4T777dAFjP5apeFKIXxgFkDzCpxI1N2MyW2xwogLoqdjzp9UOSuOpCHbTbHXnvMzbUDHSwhM7sH4ltKyEcGcX5no24EBUg0Vb7xLiThKrvcdiCNwFoDAI4En7Tvo6_yuWffyLgTuLY1QD9Z8Lcc_yHajWel5aTQ4ChFVv7wE2Gt4mAG0ntQ12Bu3d-RhWthHOVFRVP1eluZVxzW2nk05At5CkWfJ2h7ZnqKzYyM7Gc-rBbqHfGkgVWRPsUiSas2A6hRa2Q0nUpj8q1ViOY_0j5MxDX_Q4UT4r90FDClG2-Udm6CJUHOg13XxA3GdgWkqqgRBfjAG9uZC2LKQUSHZpSYe7ZEUzZgAV7ILlZBQ-Vgu5xg6vFBmADdISlbDpbBHRngQzVy_I8BsTbIv0G7M9MDciTgZs8k_UvOqkpsZlIptnwj3Q9jzUrru86hIBuLSXww3qruEVgK3FUzf0haMdUQ7cVxUb9NWYXr5eQ4_enJiREYTFBXCu607RJTv4y5VJqLrmnqq7S-tKahVhEkcWnnBPD75RNc7BJtpjOm6V6QzU31QYnwpw7GmE53mzs16WHXZzTsFDp2BPevovyAWZLSK84DV4rA96ez3bZbdQzJ-iuTQ=w1001-h667-no?authuser=0" alt="">
                                 </div>
                             </div>
                         </div>
