--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
                         </div>
                         <div class="home-img padd-15">
-                            <img src="/img/20220211_202950.jpg" alt="">
+                            <img src="home.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -313,42 +313,42 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/img/Portfolio/1.jpg" alt="">
+                                    <img src="/1.jpg" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/img/Portfolio/2.jpg" alt="">
+                                    <img src="/2.jpg" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/img/Portfolio/3.jpeg" alt="">
+                                    <img src="/3.jpeg" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/img/Portfolio/4.jpg" alt="">
+                                    <img src="/4.jpg" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/img/Portfolio/5.JPG" alt="">
+                                    <img src="/5.JPG" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/img/Portfolio/6.jpg" alt="">
+                                    <img src="/6.jpg" alt="">
                                 </div>
                             </div>
                         </div>
