--- a/index.html
+++ b/index.html
@@ -313,42 +313,42 @@
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/1.jpg" alt="">
+                                    <img src="1.jpg" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/2.jpg" alt="">
+                                    <img src="2.jpg" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/3.jpeg" alt="">
+                                    <img src="3.jpeg" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/4.jpg" alt="">
+                                    <img src="4.jpg" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/5.JPG" alt="">
+                                    <img src="5.JPG" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                    <img src="/6.jpg" alt="">
+                                    <img src="6.jpg" alt="">
                                 </div>
                             </div>
                         </div>
