--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                             <p>Age : <span>27</span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>WeSite : <span>www.SoufianeStaps.com</span></p>
+                                            <p>WebSite : <span>www.SoufianeStaps.com</span></p>
                                         </div>
                                         <div class="info-item padd-15">
                                             <p>Email : <span>K.Soufiane3995@gmail.com</span></p>
@@ -132,7 +132,7 @@
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
-                                            <h5>Natation</h5>
+                                            <h5>Swimming</h5>
                                             <div class="progress">
                                                 <div class="progress-in" style="width: 63%;"></div>
                                                 <div class="skill-percent">63%</div>
@@ -177,7 +177,15 @@
                                                         <i class="fa fa-calendar"></i> 2017 - 2019
                                                     </h3>
                                                     <h4 class="timeline-title">Master Degree in Elite Athletic Training</h4>
-                                                    <p class="timeline-text">She obtained a master’s degree in elite sports training from the Institute of Science and Techniques of Physical Sports Activities at the University of Biskra</p>
+                                                    <p class="timeline-text">I obtained a master’s degree in elite sports training from the Institute of Science and Techniques of Physical Sports Activities at the University of Biskra</p>
+                                                </div>
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> Summer 2022
+                                                    </h3>
+                                                    <h4 class="timeline-title">lifeguard swimmer Certificate</h4>
+                                                    <p class="timeline-text">I am in the summer of 2022. I got a lifeguard swimmer license from the Algerian Federation for Rescue, Ambulance and Marine Diving Activities</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -220,6 +228,14 @@
                                                     <h4 class="timeline-title">FootBall specialization.</h4>
                                                     <p class="timeline-text">Now I have a year experience in football specialization and I am still with training at O.E.O Football Academy and I am a coach for U 9 category</p>
                                                 </div>
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> 2022 - Now
+                                                    </h3>
+                                                    <h4 class="timeline-title">lifeguard swimmer.</h4>
+                                                    <p class="timeline-text">I am currently working as a part-time lifeguard swimmer with a group of patients and rehabilitation in swimming pool '19 March City' in El-Oued since June 2022</p>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -242,16 +258,16 @@
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
-                                    <i class="fa fa-hand-back-fist"></i>
+                                    <i class="fa fa-children"></i>
                                 </div>
                                 <h4>Karate Coach</h4>
-                                <p>I teach you the best techniques of self-defense and attack </p>
+                                <p>I train children U 12 with the best scientific methods to achieve the best sports results</p>
                             </div>
                         </div>
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
-                                    <i class="fa fa-running"></i>
+                                    <i class="fa fa-chalkboard-teacher"></i>
                                 </div>
                                 <h4>Fitness Coach</h4>
                                 <p>Train you to improve your fitness and build a healthy body </p>
@@ -269,10 +285,10 @@
                         <div class="service-item padd-15">
                             <div class="service-item-inner">
                                 <div class="icon">
-                                    <i class="fa fa-children"></i>
+                                    <i class="fa fa-swimmer"></i>
                                 </div>
-                                <h4>Karate Coach</h4>
-                                <p>I train children U 12 with the best scientific methods to achieve the best sports results</p>
+                                <h4>lifeguard swimmer</h4>
+                                <p>Work with all age groups in the pool as a lifeguard and paramedic</p>
                             </div>
                         </div>
                         <div class="service-item padd-15">
