--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="main-container">
         <div class="aside">
             <div class="logo">
-                <a href="#"><span>S</span>taps</a>
+                <a href="#home"><span>S</span>taps</a>
             </div>
             <div class="nav-toggler">
                 <span></span>
@@ -104,7 +104,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="buttons padd-15">
-                                            <a href="https://download1587.mediafire.com/knlko3m5jzlg/6kpwmjhupadf9iv/Soufiane+Kerrouche+CV.pdf" class="btn">Download CV</a>
+                                            <a href="https://download1478.mediafire.com/tau1vmhbzi8gHRCXFUrT_GvWlRt6vWuXWeCU2ajaJabZ9lN9sNFvN9HQmfINORlPhIPIrCzOL94KwvuEdWwSdOG8YVJT7A3Ak-Nn4uHhNSodI7wzbjc3O8ST1DBuZFqtonI8laY1E-Xa1cbfS0p1-KVEY6WSJFwWBkeaudITcQY5YeFz/il8yie9xujvzn5m/Soufiane+Cv.pdf" class="btn">Download CV</a>
                                         </div>
                                     </div>
                                 </div>
